# pzl_food

./: .flake8  .gitignore  .gitlab-ci.yml  .isort.cfg  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  alembic.ini  main.py  pyproject.toml
app/: application.py  config.py  validation.py
app/api/routers/: food.py
app/core/: context.py  database.py
app/models/: __init__.py  base.py  food.py  topping.py
app/schemas/: __init__.py  food.py  food_category.py  health_check.py  topping.py
app/services/: __init__.py  delete_food.py  get_food.py  save_food.py  utils.py
config/: settings.yml
db/alembic/: env.py
db/alembic/versions/: 20240802-0811-1a12fe2b1f59-add_food_tables.py
tests/: conftest.py  utils.py
tests/api/routers/: test_food.py
